{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 34,
  "lineage": "f13a74ae-6ddd-bde4-3498-b77164c49607",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/applicationGateways/demo-appgateway/backendAddressPools/BackEndAddressPool",
                "ip_addresses": [],
                "name": "BackEndAddressPool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/applicationGateways/demo-appgateway/backendHttpSettingsCollection/httpSetting",
                "name": "httpSetting",
                "path": "/",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 1,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/applicationGateways/demo-appgateway/frontendIPConfigurations/webAppIP",
                "name": "webAppIP",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/publicIPAddresses/demo-pip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/applicationGateways/demo-appgateway/frontendPorts/webAppPort",
                "name": "webAppPort",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/applicationGateways/demo-appgateway/gatewayIPConfigurations/gateway-ip-config",
                "name": "gateway-ip-config",
                "subnet_id": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/virtualNetworks/demo-network/subnets/demo-subnet-1"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/applicationGateways/demo-appgateway/frontendIPConfigurations/webAppIP",
                "frontend_ip_configuration_name": "webAppIP",
                "frontend_port_id": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/applicationGateways/demo-appgateway/frontendPorts/webAppPort",
                "frontend_port_name": "webAppPort",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/applicationGateways/demo-appgateway/httpListeners/httpListener",
                "name": "httpListener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/applicationGateways/demo-appgateway",
            "identity": [],
            "location": "eastus",
            "name": "demo-appgateway",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/applicationGateways/demo-appgateway/backendAddressPools/BackEndAddressPool",
                "backend_address_pool_name": "BackEndAddressPool",
                "backend_http_settings_id": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/applicationGateways/demo-appgateway/backendHttpSettingsCollection/httpSetting",
                "backend_http_settings_name": "httpSetting",
                "http_listener_id": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/applicationGateways/demo-appgateway/httpListeners/httpListener",
                "http_listener_name": "httpListener",
                "id": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/applicationGateways/demo-appgateway/requestRoutingRules/httpRoutingRule",
                "name": "httpRoutingRule",
                "priority": 0,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "rg-appgw-demo",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_Small",
                "tier": "Standard"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_public_ip.demo",
            "azurerm_resource_group.demo",
            "azurerm_subnet.demo-subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "demo-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/networkSecurityGroups/demo-allow-ssh",
            "location": "eastus",
            "name": "demo-allow-ssh",
            "resource_group_name": "rg-appgw-demo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": null,
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "fqdn": "dwiappgw01.eastus.cloudapp.azure.com",
            "id": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/publicIPAddresses/demo-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "demo-pip",
            "resource_group_name": "rg-appgw-demo",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "demo-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/virtualNetworks/demo-network/subnets/demo-subnet-1",
            "name": "demo-subnet-1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-appgw-demo",
            "virtual_network_name": "demo-network"
          },
          "dependencies": [
            "azurerm_resource_group.demo",
            "azurerm_virtual_network.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "demo-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/virtualNetworks/demo-network/subnets/demo-subnet-2",
            "name": "demo-subnet-2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-appgw-demo",
            "virtual_network_name": "demo-network"
          },
          "dependencies": [
            "azurerm_resource_group.demo",
            "azurerm_virtual_network.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4ea3708d-1e98-4827-8222-c9e714edbde0",
            "id": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/virtualNetworks/demo-network",
            "location": "eastus",
            "name": "demo-network",
            "resource_group_name": "rg-appgw-demo",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/virtualNetworks/demo-network/subnets/demo-subnet-1",
                "name": "demo-subnet-1",
                "security_group": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/networkSecurityGroups/demo-network-demo-subnet-1-nsg-eastus"
              },
              {
                "address_prefix": "10.0.1.0/26",
                "id": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/virtualNetworks/demo-network/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "security_group": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/networkSecurityGroups/demo-network-AzureBastionSubnet-nsg-eastus"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/virtualNetworks/demo-network/subnets/demo-subnet-2",
                "name": "demo-subnet-2",
                "security_group": "/subscriptions/ce9b673a-0158-4c19-9adf-d76a7f63f498/resourceGroups/rg-appgw-demo/providers/Microsoft.Network/networkSecurityGroups/demo-network-demo-subnet-2-nsg-eastus"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.demo"
          ]
        }
      ]
    }
  ]
}